Add Google AdSense to the website - Update privacy policy - Resolves #141

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -43,6 +43,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         {% comment %} to prevent conflict it with autocomplete jquery. {% endcomment %}
         <script>var jq = $.noConflict();</script>
+        <script data-ad-client="ca-pub-2992032334792000" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         {% block extrahead %}
         {% endblock extrahead %}
     </head>
