--- a/Blog/templates/Blog/privacy_policy.html
+++ b/Blog/templates/Blog/privacy_policy.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Privacy Policy for HackAdda</h1>
 
-<p>At HackAdda, accessible from hackadda.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by HackAdda and how we use it.</p>
+<p>At HackAdda, accessible from https://www.hackadda.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by HackAdda and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
@@ -40,6 +40,9 @@
 
 <p>Like any other website, HackAdda uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
 
+<h2>Google DoubleClick DART Cookie</h2>
+
+<p>Google is one of a third-party vendor on our site. It also uses cookies, known as DART cookies, to serve ads to our site visitors based upon their visit to www.website.com and other sites on the internet. However, visitors may choose to decline the use of DART cookies by visiting the Google ad and content network Privacy Policy at the following URL – <a href="https://policies.google.com/technologies/ads">https://policies.google.com/technologies/ads</a></p>
 
 
 <h2>Advertising Partners Privacy Policies</h2>
