Align images in list view as they are aligned in detail view

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -233,7 +233,8 @@ a.article-title:hover {
 
 /* forcing any image passed from the backend to stay inside the container */
 
-.article-content img {
+.article-content img,
+.article-short-des img {
     display: block;
     max-width: 100% !important;
     height: auto;
