--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -2,6 +2,9 @@
 {% load cool_timesince %}
 {% for post in posts %}
 <div class="container-fluid">
+    {% if forloop.counter|divisibleby:5 %}
+    {% include "Blog/advertisement.html" with type="horizontal" %}
+    {% endif %}
     <div class="row media content-section article-list">
         <div class="article-thumbnail col-md-3">
             <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src={{ post.thumbnail.url }} alt="{{ post.title }}"></a>
