Comment out portion for google advertisements - Adsense account suspended for self clicking
We might consider cancelling the account altogether

--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -43,12 +43,12 @@
                 {% include "tags.html" with tags=post.get_tags_list %}
             </div>
         </article>
-        {% include "Blog/advertisement.html" with type="horizontal" %}
+        {% comment %} {% include "Blog/advertisement.html" with type="horizontal" %} {% endcomment %}
     </div>
 </div>
 <div id="recommended-posts" class="article-contents content-section">
     <div id="ad-after-recommended-posts">
-    {% include "Blog/advertisement.html" with type="horizontal" %}
+    {% comment %} {% include "Blog/advertisement.html" with type="horizontal" %} {% endcomment %}
     </div>
 </div>
 {% endblock content %}
