--- a/Blog/templates/Blog/sidebar.html
+++ b/Blog/templates/Blog/sidebar.html
@@ -17,5 +17,5 @@
         <li id="popular-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Popular Categories<br></li>
     </ul>
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-    {% include "Blog/advertisement.html" with type="square" %}
+    {% comment %} {% include "Blog/advertisement.html" with type="square" %} {% endcomment %}
 </div>
