--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -44,7 +44,7 @@
         {% comment %} to prevent conflict it with autocomplete jquery. {% endcomment %}
         <script>var jq = $.noConflict();</script>
         {% comment %} google advertisements {% endcomment %}
-        <script data-ad-client="ca-pub-2992032334792000" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        {% comment %} <script data-ad-client="ca-pub-2992032334792000" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> {% endcomment %}
         {% block extrahead %}
         {% endblock extrahead %}
     </head>
