--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -1,9 +1,7 @@
-{% load cool_view %}
-{% load cool_timesince %}
-{% for post in posts %}
+{% load cool_view %} {% load cool_timesince %} {% for post in posts %}
 <div class="container-fluid">
     {% if forloop.counter|divisibleby:5 %}
-    {% include "Blog/advertisement.html" with type="horizontal" %}
+    <!-- {% include "Blog/advertisement.html" with type="horizontal" %} -->
     {% endif %}
     <div class="row media content-section article-list">
         <div class="article-thumbnail col-md-3">
@@ -13,7 +11,8 @@
             <div class="media-body article-contents">
                 <div class="article-details">
                     <h2><a class="article-title" href="{{ post.get_detail_url }}" title="{{post.title}}">{{ post.title }}</a></h2>
-                    {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
+                    {% comment %}
+                    <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
                     <div class="article-short-des">
                         {{ post.content|truncatewords_html:'35'|safe }}&nbsp;
                         <a style="display:inline-block" href="{{ post.get_detail_url }}" title="Read full article">Read more</a>
@@ -23,13 +22,13 @@
                     </div>
                     <div class="article-metadata">
                         <small><a class="mr-2" href="{% url 'Blog:author-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
-                        <small class="mr-2 text-muted" title="{{ post.date_published|date:"j M Y" }}">{{ post.date_published|cool_timesince }}</small>
+                        <small class="mr-2 text-muted" title="{{ post.date_published|date:" j M Y " }}">{{ post.date_published|cool_timesince }}</small>
                         <small class="text-muted ml-4" title={{ post.views }}>views:{{ post.views|cool_view }}</small>
                     </div>
                 </div>
             </div>
         </div>
-    {% comment %} {% include "share.html" %} {% endcomment %}
+        {% comment %} {% include "share.html" %} {% endcomment %}
     </div>
 </div>
 {% endfor %}
