--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -80,6 +80,7 @@
                                     <a class="nav-item nav-link" href="{% url 'Blog:my-posts' user 'draft' %}" title="My Post">My Posts</a>
                                     {% endif %}
                                     <a class="nav-item nav-link" href="{% url 'Blog:user-bookmarks' user %}" title="Bookmarks">Bookmarks</a>
+                                    <a class="nav-item nav-link" href="{% url 'password-change' %}" title="Change Password">Change Password</a>
                                     <a class="nav-item nav-link" href="{% url 'logout' %}" title="Log Out">Log Out</a>
                                 </div>
                             </div>
