--- a/Blog/templates/Blog/base_sidebar.html
+++ b/Blog/templates/Blog/base_sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar" class="col-md-3 content-section">
+<div id="sidebar" class="content-section px-2 col-md-3">
     <ul class="list-group">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
@@ -16,6 +16,4 @@
             <br></li>
         <li id="popular-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Popular Categories<br></li>
     </ul>
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-    {% comment %} {% include "Blog/advertisement.html" with type="square" %} {% endcomment %}
 </div>
