--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
 body {
     display: flex;
     flex-direction: column;
@@ -14,16 +13,13 @@ body {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     overflow-wrap: break-word;
 }
-
 a {
     color: #337ab7;
 }
-
 p {
     font-family: "Roboto", sans-serif;
     color: #0a1612;
 }
-
 h1,
 h2,
 h3,
@@ -33,41 +29,33 @@ h6 {
     color: #18121e;
     font-family: "Lato";
 }
-
 img {
     max-width: 100%;
     height: auto;
 }
-
 ul {
     margin: 0;
 }
-
 .fa-heart {
     color: red;
 }
-
 .btn {
     white-space: nowrap;
 }
-
 .container-fluid {
     padding-left: 0;
     padding-right: 0;
 }
-
 #brand {
     display: block;
     margin-top: auto;
     margin-bottom: auto;
 }
-
 .navbar-color,
 footer {
     /* background-color: #5f788a; */
     background-color: #192231;
 }
-
 .site-header .navbar-nav .nav-link {
     font-family: "Rubik", sans-serif;
     font-weight: 900;
@@ -75,15 +63,12 @@ footer {
     margin-left: 1rem !important;
     margin-right: 1rem !important;
 }
-
 .site-header .navbar-nav .nav-link:hover {
     color: #ffffff;
 }
-
 .site-header .navbar-nav .nav-link.active {
     font-weight: 500;
 }
-
 .dropbtn {
     background-color: transparent;
     /* color: #cbd5db; */
@@ -91,22 +76,18 @@ footer {
     font-size: 16px;
     border: none;
 }
-
 .user-image {
     height: 20px;
     width: 25px;
     cursor: pointer;
 }
-
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
 a.dropdown-toggle {
     color: black;
 }
-
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -118,41 +99,26 @@ a.dropdown-toggle {
     /* width: 100%; */
     overflow: auto;
 }
-
 #dropdown .dropdown-menu .nav-link {
     color: #444444;
 }
-
 .dropdown-menu .nav-link:hover {
     font-weight: 700;
 }
-
 #main {
     margin: 1rem;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
 }
-
 #sidebar {
     height: max-content;
 }
-
 .list-group-item.active {
     border-color: rgba(0, 0, 0, 0.125);
 }
-
 #latest-posts,
 #trending-posts {
     border-top: none;
 }
-
-
-/* 
-#latest-posts,
-#popular-tags,
-#all-tags {
-    background-color: #f8f8ff;
-} */
-
 .content-section {
     background: #ffffff;
     padding: 10px 10px;
@@ -160,20 +126,16 @@ a.dropdown-toggle {
     border-radius: 3px;
     margin-bottom: 2px;
 }
-
 .article-title {
     font-weight: 600;
     color: #444444;
 }
-
 .article-image {
     max-width: 60%;
 }
-
 .article-image>img {
     max-width: 100%;
 }
-
 footer .row {
     display: flex;
     flex-direction: row;
@@ -181,18 +143,15 @@ footer .row {
     padding: 15px;
     margin-top: 5px;
 }
-
 footer .col {
     display: flex;
     flex-direction: column;
     flex: 1;
     margin: 5px;
 }
-
 #email {
     width: 70%;
 }
-
 footer h5,
 footer h6,
 footer p,
@@ -200,36 +159,30 @@ footer a,
 footer .fa-envelope {
     color: #f2f4f6 !important;
 }
-
 footer .fa {
     font-size: 1.2rem;
 }
-
 .about-page-kids {
     display: block;
     max-width: 100%;
     margin: 5px auto;
 }
-
 a.article-title:hover {
     color: #34a1d4;
     text-decoration: none;
 }
-
 .article-short-des p {
     display: inline;
 }
-
 .article-short-des {
     display: inline;
     overflow-wrap: break-word;
 }
-
 .article-content {
     /* white-space: pre-line; */
     overflow-wrap: break-word;
+    line-height: 2;
 }
-
 
 /* forcing any image passed from the backend to stay inside the container */
 
@@ -240,50 +193,42 @@ a.article-title:hover {
     height: auto;
     margin: 5px auto;
 }
-
 .article-img {
     height: 65px;
     width: 65px;
     margin-right: 16px;
     float: left;
 }
-
 .article-metadata {
     padding-bottom: 2px;
     margin-bottom: 5px;
     border-top: 1px solid #e3e3e3;
     margin-left: 5px;
 }
-
 .article-metadata a:hover {
     color: #333;
     text-decoration: none;
 }
-
 .article-svg {
     width: 25px;
     height: 25px;
     vertical-align: middle;
 }
-
 .account-img {
     height: 125px;
     width: 125px;
     margin-right: 20px;
     margin-bottom: 16px;
 }
-
 #post-detail {
     padding: 1rem !important;
 }
-
 #post-detail .article-metadata {
     padding-bottom: 1px;
     margin-bottom: 4px;
     border-bottom: 1px solid #e3e3e3;
     border-top: none;
 }
-
 .article-tags {
     display: inline-block;
     padding: 0.4em 0.5em;
@@ -300,58 +245,47 @@ a.article-title:hover {
     /* color: #39739d; */
     color: #142d40;
     /* background-color: #E1ECF4;
-    border-color: #E1ECF4; */
+border-color: #E1ECF4; */
     background-color: #a5a5af4a;
     border-color: #e1eef4;
 }
-
 .profile {
     background-color: aliceblue;
     display: flex;
     flex-direction: row;
 }
-
 .profile>* {
     margin: 1rem;
 }
-
 .avatar {
     max-height: 300px;
     max-width: 300px;
     text-align: center;
     flex: 2;
 }
-
 .avatar img {
     max-height: 100%;
     max-width: 100%;
     /* vertical-align: middle; */
 }
-
 .author-info {
     flex: 2;
 }
-
 .author-name {
     font-weight: 900;
 }
-
 .author-profile-info {
-    flex: auto;
     flex: 1;
     overflow: hidden;
 }
-
 .truncate-string-parent {
     overflow: hidden;
 }
-
 .truncate-string {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
 #response {
     font-size: 0.9rem;
     position: fixed;
@@ -360,31 +294,20 @@ a.article-title:hover {
     opacity: 0.9;
     z-index: 1030;
 }
-
 #post-options {
     display: inline-block;
 }
-
 #article-share-container {
     display: flex;
     flex-direction: column;
 }
 
-
 /* This is the parent container that contains all meta data and the contents of the article */
 
-.article-contents {
+.article-list>*>.article-contents,
+.article-card>*>.article-contents {
     margin-left: 1rem;
 }
-
-
-/* On the detail margin, more margin is required to accomodate share icons */
-
-#article-share-container .article-contents,
-#recommended-posts {
-    margin-left: 4rem !important;
-}
-
 #share {
     text-align: center;
     position: fixed;
@@ -393,59 +316,48 @@ a.article-title:hover {
     left: 2%;
     display: inline-block;
 }
-
 .share-icon {
     display: inline;
-    font-size: 16px !important;
+    font-size: 20px !important;
     text-shadow: 1px 1px 1px #ccc;
 }
-
 .share-icon a:hover {
     opacity: 0.55;
 }
-
 #bookmark:hover,
 #unbookmark:hover {
     opacity: 1;
 }
-
 .share-icon li {
     display: inline;
 }
-
 .copy,
 .bookmark {
     /* background-color: #fff; */
     border: none;
 }
-
 #bookmark,
 #unbookmark {
     padding-top: 0px;
     padding-bottom: 0px;
 }
-
 #share .share-icon li {
     display: block;
     margin: 0.5rem auto;
 }
-
 .articles {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     flex: 1;
 }
-
 .row {
     display: flex;
     flex-direction: row;
 }
-
 .article-card>.col {
     flex: 1;
 }
-
 .article-card {
     display: flex;
     flex-direction: column;
@@ -454,14 +366,13 @@ a.article-title:hover {
     transition: 0.3s;
     margin-top: 5px;
     margin-bottom: 1.5rem;
+    padding: 0 15px!important;
     /* height: 100%; */
 }
-
 .article-card>.article-thumbnail {
     width: 100%;
     height: 200px;
 }
-
 .article-card>.article-thumbnail>a>img {
     /* max-width: 100%; */
     width: 100%;
@@ -471,99 +382,83 @@ a.article-title:hover {
     margin-right: auto;
     padding-top: 7px;
 }
-
 .article-card:hover,
 .article-card:focus {
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
 .article-container {
     padding: 0.5rem 5px;
 }
-
 .article-list>.article-thumbnail {
     display: block;
     margin: auto;
+    padding: 2px 15px;
 }
-
 .article-list>.article-thumbnail>img {
     max-width: 100%;
     max-height: 100%;
 }
-
 .tags {
     margin-top: 5px;
 }
-
 .details>.article-contents {
     display: flex;
     flex-direction: column;
 }
-
 .heading {
     font-family: "Rubik", sans-serif;
     color: #272121;
     margin-top: 2rem !important;
+    padding: 5px 1rem;
     display: flex;
     flex-direction: row;
 }
-
 .featured-articles,
 .latest-articles,
 .category-articles {
     padding: 5px 15px;
 }
-
 .featured-articles {
     height: 38rem;
     display: flex;
     flex-direction: row;
 }
-
 .featured-articles>.latest-featured {
     flex: 3 1 0;
     height: 100%;
 }
-
 .aside {
     display: flex;
     flex-direction: column;
     flex: 2 1 0;
     max-height: 100%;
 }
-
 .featured-articles>.aside>.aside-featured {
     flex: 1;
     height: 50%;
 }
-
 .featured-articles>*>.article-card,
 .featured-articles>.aside>*>.article-card {
     margin-top: 5px;
     margin-bottom: 5px;
     height: 100%;
 }
-
 .featured-articles>.latest-featured>.article-card>.article-thumbnail {
     height: 75%;
 }
-
 .featured-articles>.aside-featured>.article-card>.article-thumbnail {
     height: 40%;
 }
-
 .view-more {
     display: block;
     margin: auto;
 }
-
 .all-tags {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 .tag-details {
     display: flex;
     flex-direction: column;
@@ -572,46 +467,38 @@ a.article-title:hover {
     padding: 1px;
     width: 10vw;
 }
-
 .tag-name {
     margin: 0;
 }
-
 .tag-count {
     text-align: center;
     border-top: 1px solid #aaa;
 }
-
 .resp-sharing-button__link,
 .resp-sharing-button__icon {
     display: inline-block;
 }
-
 .resp-sharing-button__link {
     text-decoration: none;
     color: #fff;
     margin: 0.5em;
 }
-
 .resp-sharing-button {
     border-radius: 5px;
     transition: 25ms ease-out;
     padding: 0.5em 0.75em;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
-
 .resp-sharing-button__icon svg {
     width: 1em;
     height: 1em;
     margin-right: 0.4em;
     vertical-align: top;
 }
-
 .resp-sharing-button--small svg {
     margin: 0;
     vertical-align: middle;
 }
-
 
 /* Non solid icons get a stroke */
 
@@ -620,7 +507,6 @@ a.article-title:hover {
     fill: none;
 }
 
-
 /* Solid icons get a fill */
 
 .resp-sharing-button__icon--solid,
@@ -628,80 +514,64 @@ a.article-title:hover {
     fill: #fff;
     stroke: none;
 }
-
 .resp-sharing-button--twitter {
     background-color: #55acee;
 }
-
 .resp-sharing-button--twitter:hover {
     background-color: #2795e9;
 }
-
 .resp-sharing-button--facebook {
     background-color: #3b5998;
 }
-
 .resp-sharing-button--facebook:hover {
     background-color: #2d4373;
 }
-
 .resp-sharing-button--linkedin {
     background-color: #0077b5;
 }
-
 .resp-sharing-button--linkedin:hover {
     background-color: #046293;
 }
-
 .resp-sharing-button--facebook {
     background-color: #3b5998;
     border-color: #3b5998;
 }
-
 .resp-sharing-button--facebook:hover,
 .resp-sharing-button--facebook:active {
     background-color: #2d4373;
     border-color: #2d4373;
 }
-
 .resp-sharing-button--twitter {
     background-color: #55acee;
     border-color: #55acee;
 }
-
 .resp-sharing-button--twitter:hover,
 .resp-sharing-button--twitter:active {
     background-color: #2795e9;
     border-color: #2795e9;
 }
-
 .resp-sharing-button--linkedin {
     background-color: #0077b5;
     border-color: #0077b5;
 }
-
 .resp-sharing-button--linkedin:hover,
 .resp-sharing-button--linkedin:active {
     background-color: #046293;
     border-color: #046293;
 }
-
 ::selection {
     color: white;
     background-color: #808080fe;
 }
-
 ::-webkit-selection {
     background-color: #808080fe;
     color: white;
 }
-
 ::-moz-selection {
     /* Code for Firefox */
     color: white;
     background-color: #808080fe;
 }
-
 #socialIcons .fa {
     padding: 2px;
     margin-right: 1px !important;
@@ -709,11 +579,10 @@ a.article-title:hover {
     font-size: 2rem !important;
 }
 
-
 /* .num {
-    font-family: 'CooperHewittBold';
-    font-weight: normal;
-    font-style: normal;
+font-family: 'CooperHewittBold';
+font-weight: normal;
+font-style: normal;
 } */
 
 
@@ -729,7 +598,6 @@ a.article-title:hover {
     margin-top: 1.5rem!important;
     margin-bottom: 1rem!important;
 }
-
 .article-content blockquote {
     font-style: italic;
     font-family: Georgia, Times, "Times New Roman", serif;
@@ -742,16 +610,13 @@ a.article-title:hover {
     border-left-width: 5px;
     margin: 1rem;
 }
-
 .article-content blockquote p {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-
 .article-content a {
     color: #0782c1;
 }
-
 .article-content ol,
 .article-content ul,
 .article-content dl {
@@ -761,31 +626,27 @@ a.article-title:hover {
     padding: 0 2rem;
 }
 
-
 /* .article-content h1,h2,h3,h4,h5,h6 {
-	font-weight: normal;
-	line-height: 1.2;
+font-weight: normal;
+line-height: 1.2;
 } */
 
 .article-content hr {
     border: 0px;
     border-top: 1px solid #ccc;
 }
-
 .article-content img.right {
     border: 1px solid #ccc;
     float: right;
     margin-left: 15px;
     padding: 5px;
 }
-
 .article-content img.left {
     border: 1px solid #ccc;
     float: left;
     margin-right: 15px;
     padding: 5px;
 }
-
 .article-content pre {
     white-space: pre-wrap;
     /* CSS 2.1 */
@@ -794,15 +655,12 @@ a.article-title:hover {
     -moz-tab-size: 4;
     tab-size: 4;
 }
-
 .article-content .marker {
     background-color: Yellow;
 }
-
 .article-content span[lang] {
     font-style: italic;
 }
-
 .article-content figure {
     text-align: center;
     outline: solid 1px #ccc;
@@ -811,7 +669,6 @@ a.article-title:hover {
     display: table;
     margin: 10px auto;
 }
-
 .article-content figure>figcaption {
     text-align: center;
     display: block;
@@ -819,27 +676,22 @@ a.article-title:hover {
     font-weight: 400;
     color: #6c757d !important;
 }
-
 .article-content a>img {
     padding: 1px;
     margin: 1px;
     border: none;
     outline: 1px solid #0782c1;
 }
-
 .article-content pre {
     margin-top: 1rem;
 }
-
 .article-content code {
     background-color: #edf2f7;
     padding: 0.25rem;
 }
-
 .article-content pre code {
     background: #eee;
 }
-
 
 /* handles table on both small and large devices. */
 
@@ -857,82 +709,68 @@ a.article-title:hover {
     transform: translate(-50%);
     /* max-width: 100%; */
 }
-
 .article-content table tbody tr:nth-of-type(2n+1) {
     background-color: rgba(0, 0, 0, .05) !important;
 }
-
 .article-content table td,
 .article-content table th {
     padding: 0.75rem !important;
     border: 1px solid #dee2e6 !important;
 }
 
-
 /* Widget Styles */
 
 .article-content .code-featured {
     border: 5px solid red;
 }
-
 .article-content .math-featured {
     padding: 20px;
     box-shadow: 0 0 2px rgba(200, 0, 0, 1);
     background-color: rgba(255, 0, 0, 0.05);
     margin: 10px;
 }
-
 .article-content .image-clean {
     border: 0;
     background: none;
     padding: 0;
 }
-
 .article-content .image-clean>figcaption {
     font-size: 0.9em;
     text-align: right;
 }
-
 .article-content .image-grayscale {
     background-color: white;
     color: #666;
 }
-
 .article-content .image-grayscale img,
 .article-content img.image-grayscale {
     filter: grayscale(100%);
 }
-
 .article-content .embed-240p {
     max-width: 426px;
     max-height: 240px;
     margin: 0 auto;
 }
-
 .article-content .embed-360p {
     max-width: 640px;
     max-height: 360px;
     margin: 0 auto;
 }
-
 .article-content .embed-480p {
     max-width: 854px;
     max-height: 480px;
     margin: 0 auto;
 }
-
 .article-content .embed-720p {
     max-width: 1280px;
     max-height: 720px;
     margin: 0 auto;
 }
-
 .article-content .embed-1080p {
     max-width: 1920px;
     max-height: 1080px;
     margin: 0 auto;
 }
-
 
 /* For adjusting the size of the auto suggestion input */
 
@@ -940,17 +778,15 @@ a.article-title:hover {
     height: auto!important;
 }
 
-
 /* user for nav-tabs on the user's posts page */
 
 a:not([href]):not([tabindex]) {
     cursor: pointer;
 }
-
 @media (max-width: 600px) {
     #main {
         margin: 1rem;
-        padding: 0;
+        padding: 0 !important;
     }
     #sidebar {
         margin-top: 1rem;
@@ -973,22 +809,19 @@ a:not([href]):not([tabindex]) {
     .share-icon {
         float: none !important;
         display: inline-flex;
+        font-size: 16px !important;
     }
     #share .share-icon li {
         margin: 0;
     }
     /* .fa-bookmark {
-        margin-top: -1rem;
-    } */
+margin-top: -1rem;
+} */
     #article-share-container {
         flex-direction: column-reverse;
     }
     .article-contents {
         margin-left: 0;
-    }
-    #article-share-container .article-contents,
-    #recommended-posts {
-        margin-left: 0 !important;
     }
     .article-list>.article-thumbnail>img {
         width: 100%;
@@ -1006,7 +839,7 @@ a:not([href]):not([tabindex]) {
     }
     .featured-articles {
         /* flex-direction: column;
-        height: 90rem; */
+height: 90rem; */
         display: block;
         height: auto;
     }
@@ -1034,8 +867,8 @@ a:not([href]):not([tabindex]) {
         flex-direction: column;
     }
     /* .profile>* {
-        ! margin: 1rem;
-    } */
+! margin: 1rem;
+} */
     .author-info {
         text-align: left;
     }
