--- a/Blog/templates/Blog/draft_post_list.html
+++ b/Blog/templates/Blog/draft_post_list.html
@@ -2,7 +2,7 @@
 {% load cool_timesince %}
 {% for post in posts %}
 <div class="container-fluid">
-    <div class="row media content-section article-list">
+    <div class="row no-gutters media content-section article-list">
         <div class="article-thumbnail col-md-3">
             <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
         </div>
