--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -1,5 +1,5 @@
 <footer class="container-fluid mt-auto">
-    <div class="row">
+    <div class="row no-gutters">
         <div class="col">
             <div class="subscription">
                 <h5 id="noText">Stay updated with our latest articles and other stuff</h5>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row no-gutters">
         <div class="col">
             <div class="copyright">
                 <h6><a href="{% url 'image-license' %}" title="Image License">Image License</a> | <a href="{% url 'privacy-policy' %}" title="Privacy Policy">Privacy Policy</a> | ©2020 HackAdda All rights reserved</h6>
