--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -1,48 +1,5 @@
-{% extends "Blog/base.html" %}
-{% load cool_view %}
-{% block extrahead %}
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/foundation.min.css">
-{% endblock extrahead %}
-{% block content %}
-<div id="article-share-container">
-    <div id="share">
-        {% include "share.html" %}
-    </div>
-
-
-    <div class="article-contents">
-        <article id="post-detail" class="content-section">
-            <div class="media-body">
-                <div class="article-metadata">
-                    <div class="article-title">
-                        <h1>{{ post.title }}</h1>
-                    </div>
-                    <div class="article-info">
-                        <a class="mr-2" href="{% url 'Blog:author-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a>
-                        {% comment %} <small class="text-muted mr-2" title={{ post.views }}>views: {{ post.views|cool_view }}</small> {% endcomment %}
-                        {% comment %} <small class="text-muted mr-2" title="{{ post.date_published }}">Published: {{ post.date_published|date:"j M Y" }}</small> {% endcomment %}
-                        {% comment %} {% if post.date_published != post.last_updated %} {% endcomment %}
-                        {% comment %} <small class="text-muted date-modified" title="{{ post.last_updated }}">Last modified: {{ post.last_updated|date:"j M Y" }}</small> {% endcomment %}
-                        {% comment %} {% endif %} {% endcomment %}
-                        {% comment %} {% if post.author == user and user|has_group:"editor" %}
-                            <div id="post-options">
-                                <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Update">Update</a>
-                                <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Delete">Delete</a>
-                            </div>
-                        {% endif %} {% endcomment %}
-                    </div>
-                </div>
-                <div class="article-image m-auto">
-                    <img src="{{post.image.url}}" alt="{{post.title}}">
-                </div>
-                <div class="article-content mt-4">{{ post.content|safe }}</div>
-                {% include "tags.html" with tags=post.get_tags_list %}
-            </div>
-        </article>
-    </div>
-</div>
-
+{% extends "Blog/post_detail.html" %}
+{% block post_status_form %}
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
@@ -53,8 +10,5 @@
         {% endif %}
     </div>
 </form>
-{% endblock content %}
-{% block extrabottom %}
-<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-{% endblock extrabottom %}
+{% endblock post_status_form %}
+{% block recommended_posts %}{% endblock recommended_posts %}
