--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -29,12 +29,14 @@
                         {% if post.date_published != post.last_updated %}
                         <small class="text-muted date-modified" title="{{ post.last_updated }}">Last modified: {{ post.last_updated|date:"j M Y" }}</small>
                         {% endif %}
+                        {% block post_options %}
                         {% if post.author == user and user|has_group:"editor" %}
                             <div id="post-options">
                                 <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Update">Update</a>
                                 <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Delete">Delete</a>
                             </div>
                         {% endif %}
+                        {% endblock post_options %}
                     </div>
                 </div>
                 <div class="article-image m-auto">
