--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -1,4 +1,5 @@
 {% extends "Blog/post_detail.html" %}
+{% block post_options %}{% endblock post_options %}
 {% block post_status_form %}
 <form method="post">
     {% csrf_token %}
