Add comments app, some other minor improvements
minor improvements
- recommended articles are now suggested based on tags and trending ones.
- remove sidebar thing from the detail view.

--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -12,4 +12,4 @@
     </div>
 </form>
 {% endblock post_status_form %}
-{% block recommended_posts %}{% endblock recommended_posts %}
+{% block comment_and_recommended_posts %}{% endblock comment_and_recommended_posts %}
