--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -2,12 +2,15 @@
 {% load static from staticfiles %}
 {% load cool_view %}
 {% load extra_auth %}
+{% load comment_tags %}
+{% comment %} {% include_bootstrap  %} {% endcomment %}
 {% block extrahead %}
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/foundation.min.css">
 {% endblock extrahead %}
 {# makes the side go down #}
-{% block sidebar %}{% include "./post_detail_sidebar.html" %}{% endblock sidebar %}
+{% comment %} {% block sidebar %}{% include "./post_detail_sidebar.html" %}{% endblock sidebar %} {% endcomment %}
+{% block sidebar %}{% endblock sidebar %}
 {% block cls_mainbar %}col-md-12{% endblock cls_mainbar %}
 {% block style_main %}padding: 5px 15%;{% endblock style_main %}
 {% block content %}
@@ -40,7 +43,7 @@
                     </div>
                 </div>
                 <div class="article-image m-auto">
-                    <img src="{{post.image.url}}" alt="{{post.title}}">
+                    <img src="{{ post.image.url }}" alt="{{ post.title }}">
                 </div>
                 <div class="article-content mt-4">{{ post.content|safe }}</div>
                 {% include "tags.html" with tags=post.get_tags_list %}
@@ -49,10 +52,10 @@
         {% comment %} {% include "Blog/advertisement.html" with type="horizontal" %} {% endcomment %}
     </div>
 </div>
-{% block post_status_form %}
-{% endblock post_status_form %}
+{% block post_status_form %}{% endblock post_status_form %}
+{% block comments_and_recommended_posts %}
 {% block recommended_posts %}
-<div id="recommended-posts" class="article-contents content-section">
+<div id="recommended-posts" class="article-contents content-section col-md-12">
     <div id="ad-after-recommended-posts">
     {% comment %} {% include "Blog/advertisement.html" with type="horizontal" %} {% endcomment %}
     </div>
@@ -60,13 +63,20 @@
 {% comment %} For requesting recommended posts {% endcomment %}
 <script>
     const id ='#ad-after-recommended-posts';
-    const data = {slug:'{{post.slug}}', top_n:3};
+    const data = {slug:'{{ post.slug }}', top_n:6};
     url = "{% url 'Blog:recommended-posts' %}";
-    jq.post(url, { data: JSON.stringify(data), 'csrfmiddlewaretoken': window.CSRF_TOKEN }, function(response) {
+    jq.post(url, { 'data': JSON.stringify(data), 'csrfmiddlewaretoken': window.CSRF_TOKEN }, function(response) {
         jq(id).before(response);
     });
 </script>
 {% endblock recommended_posts %}
+{% block comments %}
+{% include_static_jquery %}
+<div class="article-comments col-md-12 content-section">
+  {% render_comments post request %}
+</div>
+{% endblock comments %}
+{% endblock comments_and_recommended_posts %}
 {% endblock content %}
 {% block extrabottom %}
 <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
