Fix recommendation, images distrotion and WEBP images are a WIP
fix recommmendation
- trending and similar articles don't have a common post between them

image distrotion
- image is a bit cropped but better than distroted, used object-fit property in css.

WEBP images are a work in progress
- there is some issue in serving of the images which will be fixed later.
- all packages including Django have been updated to make use of this package.

Fix installation of markupfield package

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -1,6 +1,7 @@
-{% load static from staticfiles %}
+{% load static %}
 {% load meta %}
 {% load extra_auth %}
+{% load webp %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {% include 'meta/meta.html' %}
-        <link rel="canonical" href="{{request.build_absolute_uri}}">
+        <link rel="canonical" href="{{ request.build_absolute_uri }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Rubik|Lato&display=swap">
