--- a/Blog/templates/Blog/draft_post_list.html
+++ b/Blog/templates/Blog/draft_post_list.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row no-gutters media content-section article-list">
         <div class="article-thumbnail col-md-3">
-            <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
+            <img src="{{ post.thumbnail.url }}" alt="{{post.title}}" title="{{post.title}}">
         </div>
         <div class="details col-md-9">
             <div class="media-body article-contents">
