--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -1,5 +1,5 @@
 {% extends "Blog/base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 {% load cool_view %}
 {% load extra_auth %}
 {% load comment_tags %}
