--- a/Blog/templates/post_card_home.html
+++ b/Blog/templates/post_card_home.html
@@ -1,18 +1,14 @@
 {% load cool_view %}
 {% load cool_timesince %}
+{% load webp %}
 <div class="article-thumbnail">
 {% if latest_featured == 1 %}
-    <a href="{{post.get_detail_url}}" title="{{post.title}}"><img src="{{post.image.url}}" alt="{{post.title}}"></a>
+    <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src="{{ post.image.url }}" alt="{{ post.title }}"></a>
 {% else %}
-    <a href="{{post.get_detail_url}}" title="{{post.title}}"><img src="{{post.thumbnail.url}}" alt="{{post.title}}"></a>
+    <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src="{{ post.thumbnail.url }}" alt="{{ post.title }}"></a>
 {% endif %}
 </div>
 <div class="col article-container">
-    <h{{font|default:6}}><a class="article-title" href="{{post.get_detail_url}}" title="{{post.title}}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
+    <h{{ font|default:6 }}><a class="article-title" href="{{ post.get_detail_url }}" title="{{ post.title }}">{{ post.title|truncatechars:'80' }}</a></h{{font|default:6}}>
 </div>
-{% comment %} <div class="article-metadata">
-    <small class="text"><a class="mr-1" href="{% url 'Blog:author-posts' post.author.username %}" title="{{post.author.get_full_name|title}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a></small>
-    <small class="mr-1 text-muted" title="{{ post.date_published|date:"j M Y" }}">{{ post.date_published|cool_timesince }}</small>
-    <small class="ml-1 text-muted" title={{post.views}}>views:{{post.views|cool_view}}</small>
-</div> {% endcomment %}
 {% include "post_metadata.html" %}
