--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -5,12 +5,12 @@
     {% endif %}
     <div class="row no-gutters media content-section article-list">
         <div class="article-thumbnail col-md-3">
-            <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src={{ post.thumbnail.url }} alt="{{ post.title }}"></a>
+            <a href="{{ post.get_detail_url }}" title="{{ post.title }}"><img src="{{ post.thumbnail.url }}" alt="{{ post.title }}"></a>
         </div>
         <div class="details col-md-9">
             <div class="media-body article-contents">
                 <div class="article-details">
-                    <h2><a class="article-title" href="{{ post.get_detail_url }}" title="{{post.title}}">{{ post.title }}</a></h2>
+                    <h2><a class="article-title" href="{{ post.get_detail_url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
                     <div class="article-short-des">
                         {{ post.content|truncatewords_html:'35'|safe }}&nbsp;
                         <a style="display:inline-block" href="{{ post.get_detail_url }}" title="Read full article">Read more</a>
